Fixed workflow size issue on ie. Fixed button alignment in add step pannel

--- a/app/assets/stylesheets/workflow.scss
+++ b/app/assets/stylesheets/workflow.scss
@@ -273,6 +273,13 @@ span.orange {
   z-index:2;
 }
 
+
+.feditor-sidebar.addstep {
+  button {
+    margin: 0px 5px 0px 13px !important;
+  }
+}
+
 p.alert {
   color: #ff6600;
 }
